Fix overflow problem

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,7 @@ footer a:hover {
     text-align: justify;
 }
 
-.poop {
+.overflow {
     overflow: hidden;
 }
 .activepoop {
